2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/ds390/main.c,
	  src/hc08/main.c,
	  src/mcs51/main.c,
	  src/pic14/main.c,
	  src/pic16/main.c:
	  Explicitly state _BitInt non-support.

2022-03-10 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Clarify --std-cxx and --std-sdccxx.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/SDCCpeeph.c:
	  Calculate size of general ASxxx directives, apply [patches:428].

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCmain.c
	  src/pdk/gen.c
	  src/pdk/main.c
	  src/pdk/peep.c
	  Support for bit-precise integer types on pdk.
	* src/stm8/gen.c,
	  src/stm8/main.c,
	  src/z80/gen.c,
	  support/regression/tests/bitintarith.c:
	  Fix left shift of bit-precise integer types.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Support for bit-precise integer types on sm83 up to a width of 16.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* doc/sdccman.lyx,
	  src/z80/gen.c,
	  src/z80/main.c,
	  support/regression/tests/bitint.c:
	  Bit-precise types and bit-fields thereof for z80-related (except sm83, which only gets support up to a width of 8 bits for now).

2022-03-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c,
	  src/mos6502/main.c,
	  src/mos6502/ralloc.h:
	  Avoid marking the accumulator dirty after a compare operation.

2022-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asxxsrc/asmain.c,
	  sdas/asxxsrc/asxxxx.h:
	  Merge all kinds of .if directives from upstream ASxxxx.
	* sdas/asgb/gbpst.c:
	  Enable in sm83 for testing.

2022-03-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/peeph.def: