@@ -1,3 +1,12 @@
+2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
+
+	* src/SDCCglue.c,
+	  src/SDCCsymt.c,
+	  src/SDCCval.c,
+	  support/regression/tests/bitint.c,
+	  support/regression/tests/bitintbitfield.c:
+	  Fix an issue in casts between bitprecise types of different sign.
+
 2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
 	* src/ds390/main.c,
